ui fix: events alignment in home component

--- a/src/app/components/event/event.component.scss
+++ b/src/app/components/event/event.component.scss
@@ -1,5 +1,5 @@
 .event {
-    width: 306px;
+    // width: 306px;
     background-color: #ffff;
 
     .top {
@@ -51,8 +51,8 @@
 }
 
 
-@media screen and (max-width: 594px) {
-    .event {
-        min-width: 80%!important;
-    }
-}
+// @media screen and (max-width: 594px) {
+//     .event {
+//         min-width: 80%!important;
+//     }
+// }
