--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,9 +63,9 @@ body {
             max-width: 30%!important;
 
 
-            .event {
-                width: 50%;
-            }
+            // .event {
+            //     width: 50%;
+            // }
 
             #events {
                 .col-6 {
